[gd_scene load_steps=11 format=3 uid="uid://c4cp2gctv8fgk"]

[ext_resource type="Script" uid="uid://b3b2kl4oyu7iq" path="res://scenes/game/units/unit_ui.gd" id="1_wym2j"]
[ext_resource type="Shader" uid="uid://cs5w32e418eaj" path="res://assets/shader/unit.gdshader" id="2_scjr7"]
[ext_resource type="Texture2D" uid="uid://cglfa6udtw18d" path="res://assets/units/unit_ta.png" id="3_hwp2m"]
[ext_resource type="Texture2D" uid="uid://c5qf7rqxxcvje" path="res://assets/units/unit_tb.png" id="3_scjr7"]
[ext_resource type="Texture2D" uid="uid://1rs2ndrj5hhc" path="res://assets/ui/unit_selected.png" id="4_3gpgx"]
[ext_resource type="PackedScene" uid="uid://yvtxxd7huor6" path="res://scenes/game/effects/morale_flash.tscn" id="4_hwp2m"]
[ext_resource type="PackedScene" uid="uid://dadnwuy2v5xk4" path="res://scenes/game/effects/morale_popup.tscn" id="4_xqi78"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xqi78"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_74e6i"]
noise = SubResource("FastNoiseLite_xqi78")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6v8n0"]
resource_local_to_scene = true
shader = ExtResource("2_scjr7")
shader_parameter/dissolve_amount = 0.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_74e6i")

[node name="UnitUi" type="Node2D"]
script = ExtResource("1_wym2j")
sprite_team_0 = ExtResource("3_hwp2m")
sprite_team_1 = ExtResource("3_scjr7")
morale_popup_scene = ExtResource("4_xqi78")
morale_flash_scene = ExtResource("4_hwp2m")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6v8n0")
texture = ExtResource("3_hwp2m")

[node name="MoraleBar" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -26.0
offset_right = 28.0
offset_bottom = -18.0
scale = Vector2(1e-05, 1)
color = Color(0, 0.556863, 0, 1)

[node name="CoverLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrokenLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Broken
"

[node name="UnitSelectedSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_3gpgx")
